--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <div id="container"></div>
             <input type="text" id="input-el" placeholder="type it in">  <button id="add-btn">Add</button>
             <p class="paragraph"></p>
-        <script src="index.pack.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
