--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>To do list</h1>   
         <div id="container"></div>
-            <input type="text" id="input-el" placeholder="type it in">  <button id="add-btn">Add</button>
+            <input type="text" id="input-el" placeholder="Skills to learn in 2023">  <button id="add-btn">Add</button>
             <p class="paragraph"></p>
         <script src="index.js"></script>
     </body>
