--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <h1>To do list</h1>   
         <div id="container"></div>
             <input type="text" id="input-el" placeholder="Skills to learn in 2023">  <button id="add-btn">Add</button>
-            <p class="paragraph"></p>
+            <ul id="paragraph">
+            </ul>
         <script src="index.js"></script>
     </body>
 </html>
